# semblance

./: .gitignore  Makefile  Pipfile  README.md  TODO.md  pyproject.toml  setup.py  wpa_supplicant.conf.example
src/: camera_client.py
src/pi/: Makefile  camera_tcp_client.py  camera_tcp_server.py  camera_zmq_client.py  fps.py  frame_generator.py  pi_camera_capture.py  semblance_client.py  split_frames.py
src/semblance/: camera_proxy.py  camera_tcp_server.py  camera_zmq_hub.py  capture_manager.py  remotepicamstream.py  semblance.py  stream_capturer.py  webcamvideostream.py  window_manager.py
src/semblance/contours/: canny_edge_detector.py  detection.py
src/semblance/face/: detector.py
src/semblance/features/convolution/: base.py  filters.py
src/semblance/features/documentscanner/: pdf_scanner.py
src/semblance/features/edgedetection/: canny_edge_detector.py  canny_edge_filter.py
src/semblance/features/facedetection/: detector.py  eye_blink_detector.py  facial_landmark_detector.py
src/semblance/features/tracking/: centroid_tracker.py  tennis_ball_detector.py  tracker.py
src/semblance/filters/contrast/: sharpen.py
src/semblance/filters/edge/: canny.py  laplacian.py
src/semblance/models/: simple_cats_vs_dogs.py
src/semblance/scanner/: pdf_scanner.py
tests/: test_classifier.py
