[tool.poetry]
name = "semblance"
version = "0.1.0"
description = ""
authors = ["joustava <joustava@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
tensorflow = "^2.4.1"
Keras = "^2.4.3"
numpy = "<1.20.0"
imutils = "^0.5.4"
sklearn = "^0.0"
scikit-learn = "^0.24.1"
opencv-python = "^4.5.1"
dlib = "^19.22.0"

[tool.poetry.dev-dependencies]
green = "^3.2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
